# AS32

./: CLAUDE.md  README.md
docs/: SA32_BOM.xlsx  build_bom.py  build_pdf.py  součástky.txt
smart_amp_proto/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
smart_amp_proto/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
smart_amp_proto/main/audio/: i2s_dma.c  i2s_dma.h  source_manager.c  source_manager.h  volume_ctrl.c  volume_ctrl.h
smart_amp_proto/main/codecs/: aac_sbc_decoder.c  aac_sbc_decoder.h  flac_decoder.c  flac_decoder.h  stream_decoder.c
smart_amp_proto/main/drivers/: amp_control.c  amp_control.h  i2s_mux.c  i2s_mux.h  i2s_pcm5102a.c  i2s_pcm5102a.h  oled_ssd1306.c  oled_ssd1306.h  rotary_ec11.c  rotary_ec11.h
smart_amp_proto/main/network/: bt_a2dp_sink.c  bt_a2dp_sink.h  ota_updater.c  ota_updater.h  udp_receiver.c  udp_receiver.h  wifi_sta.c  wifi_sta.h
smart_amp_proto/main/storage/: nvs_config.c  nvs_config.h
smart_amp_proto/main/utils/: heap_debug.c  heap_debug.h  serial_cli.c  serial_cli.h
