idf_component_register(
    SRCS
        "main.c"
        "drivers/i2s_pcm5102a.c"
        "drivers/amp_control.c"
        "drivers/oled_ssd1306.c"
        "drivers/rotary_ec11.c"
        "audio/i2s_dma.c"
        "audio/volume_ctrl.c"
        "audio/source_manager.c"
        "codecs/flac_decoder.c"
        "codecs/aac_sbc_decoder.c"
        "network/wifi_sta.c"
        "network/udp_receiver.c"
        "network/bt_a2dp_sink.c"
        "storage/nvs_config.c"
        "utils/serial_cli.c"
        "utils/heap_debug.c"
    INCLUDE_DIRS
        "."
        "drivers"
        "audio"
        "codecs"
        "network"
        "storage"
        "utils"
    REQUIRES
        driver
        esp_driver_i2s
        esp_driver_gpio
        esp_driver_i2c
        esp_wifi
        esp_netif
        esp_event
        nvs_flash
        bt
        console
        lwip
        esp_timer
        esp_psram
        audio_pipeline
        audio_sal
        esp-adf-libs
        esp_peripherals
)
